# BEMCom

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  Readme.md  TODO.md  build_all_services.sh  docker-compose.yml  messages.md  requirements.txt
API/django_code/: pytest.ini
Admin_UI/: .env  docker-compose.yml  requirements.txt
Node-RED-connector/flow_trial/: .config.json  .config.json.backup  .env  .flows.json.backup  .flows_cred.json.backup  docker-compose.yml  flows.json  flows_cred.json  package-lock.json  package.json  settings.js
application_builder/: Dockerfile  Readme.md  requirements.md  run.sh
applications/holl/: .env  (+1 more)
connectors/: Readme.md
demo/: Readme.md
docs/: Readme.md  requirements.txt
documentation/: 01_concepts.md  01_introduction.md  02_application_creation.md  02_message_format.md  03_service_development.md  03_services.md  03_services_01_connectors.md  03_services_02_message_brokers.md  03_services_03_databases.md  03_services_04_apis.md  04_application_builder.md  04_message_format.md  Readme.md  connectors.md  messages.md  table_of_contents.md
helm_charts/: Readme.md
service_templates/connectors/Python/source/: Dockerfile  Readme.md  docker-entrypoint.sh  pyproject.toml  setup.py
service_templates/connectors/Python/source/pyconnector_template/: dispatch.py  pyconector_template.py  pyconnector_template.py
service_templates/connectors/Python/source/pyconnector_template.egg-info/: PKG-INFO  SOURCES.txt
service_templates/connectors/Python/source/tests/: demo_connector.py  test_dispatch.py  test_pyconnector_template.py
(+606 files in other folders)
